Fix links only images being too small with left or right layouts

--- a/public/assets/css/public.css
+++ b/public/assets/css/public.css
@@ -882,6 +882,16 @@ html.with-featherlight {
   .layout-right .hotspots-image-container {
     flex: 0 0 75%; } }
 
+@media screen and (min-width: 600px) {
+  .layout-left.links-only .hotspots-image-container,
+  .layout-right.links-only .hotspots-image-container {
+    flex: 0 0 100%; } }
+
+@media screen and (min-width: 900px) {
+  .layout-left.links-only .hotspots-image-container,
+  .layout-right.links-only .hotspots-image-container {
+    flex: 0 0 100%; } }
+
 .layout-bottom .hotspots-interaction {
   flex-direction: column-reverse; }
 
